Fix main part of T68646: Library overrides: Broken parenting (parent inverse matrix gets reset) after reload.

We need a custom 'apply override' callback here to prevent resetting
the inverse parent matrix.

Things are now working for basic cases, but complex ones (in production
rigs e.g.) are still partially broken...